Fixes  #6766 Let Super User view and edit segments created by other users
As a Super User:

 * I can now see all segments that were created for this website by any other user
  * When a segment was created by another user who is not Super User, the segment appears below a new section "Visible to you because you have Super User access:"
  * Such segments are editable by the Super User
   * The only difference when editing someone else's segment, as a Super User, is that "This segment is visible to [ME]" now says "This segment is visible to [SEGMENT_AUTHOR_USERNAME]"
 * One can now search in the  search bar for a username and see all segments created by this user

For all users:

 * New section "Shared with you:" now lists segments created by a Super User, and marked as "Visible to [All Users]"
   * Before segments  shared with me, looked the same as segments I created, which was confusing

--- a/plugins/SegmentEditor/stylesheets/segmentation.less
+++ b/plugins/SegmentEditor/stylesheets/segmentation.less
@@ -174,7 +174,7 @@ div.scrollable {
 }
 
 .segment-element .segment-nav div > ul > li a {
-    color: #5d5342;
+    color: @theme-color-text-light;
     font-size: 11px;
     font-weight: bold;
     text-decoration: none;
@@ -454,7 +454,7 @@ div.scrollable {
 }
 
 .segmentationContainer .submenu ul {
-    color: #5D5342;
+    color: @theme-color-text-light;
     float: none;
     font-size: 11px;
     font-weight: normal;
@@ -572,7 +572,7 @@ body > a.ddmetric {
     cursor: move;
     padding: 1px 0 2px 18px;
     background: #eae8e3 url(plugins/SegmentEditor/images/segment-move.png) 100% 50% no-repeat;
-    color: #5d5342;
+    color: @theme-color-text-light;
     font-weight: normal;
     font-size: 11px;
     text-decoration: none;
@@ -758,4 +758,12 @@ a.metric_category {
     margin-left: 7px;
     display: inline-block;
     vertical-align: sub;
+}
+
+.segmentsVisibleToSuperUser, .segmentsSharedWithMeBySuperUser {
+    font-style: italic;
+
+    li {
+        font-style: normal;
+    }
 }
